social menu pages

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -30,6 +30,9 @@ a:active {
   text-indent:2em;
 }
 
+ul,li{
+  list-style-type:none;
+}
 /*
  Internet Explorer 10 doesn't differentiate device width from viewport width, and thus doesn't 
  properly apply the media queries in Bootstrap's CSS. To address this, 
@@ -891,7 +894,6 @@ h1 {
   padding-top: 5px;
   font-family: 'Microsoft YaHei';
 }
-
 .c-img{
   display: inline-block;
     width: 100px;
@@ -909,6 +911,37 @@ h1 {
 }
 .c-img-04{
   background-image: url(../img/team.png);
+}
+.c-img-fl{
+  float:left;
+  background-color: #f2f2f2;
+  padding:15.5px 15px;
+  width: 82.5%;
+  font-size: 10.5px;
+}
+.c-img-fr{
+  float: left;
+  width: 17.5%;
+}
+.c-social-date{
+ font-size: 25px;
+ color: #c9caca;
+ margin:0;
+}
+.c-social-title{
+  font-size: 16.6px;
+  
+}
+.c-social-title:hover> h3{
+  color: #c3222c;
+}
+.social-ul{
+  margin:0;
+  padding:0;
+}
+.social-ul > li {
+  border-bottom: 1px solid #c9caca;
+  padding: 60px 0 20px;"
 }
 /* Background Colors */
 .c-bg-white {
