--- a/public/css/components.css
+++ b/public/css/components.css
@@ -90,14 +90,12 @@ h1 {
   font-size: 22px;
   margin: 10px 0; }
 
-.fundac li{
- background:#efefef;
-}
 
-.active-porduct,.fundac li:first-child{
+
+.active-porduct{
  background:#efefef;
 }
-.active-porduct a,.fundac li:first-child a{
+.active-porduct a{
   color: #fff;
 }
 .c-about{
@@ -119,7 +117,6 @@ h1 {
   background-color: #f8e4b5;
   font-size:12.5px;
   line-height: 27px;
-  padding-left: 20px;
   
 }
 .imghover{
