--- a/public/css/components.css
+++ b/public/css/components.css
@@ -90,8 +90,21 @@ h1 {
   font-size: 22px;
   margin: 10px 0; }
 
-
-
+/*大事记时间轴*/
+.timeline{width:860px;margin:40px auto;position: relative;overflow: hidden;}
+.timelinetop{width: 66px;height: 56px;margin:0 auto; }
+.timelinecontent{width: 860px;height:180px;background: url("/img/line03.png") repeat-y 50% 0; overflow: hidden;}
+.timelinecontent dl{width: 640px;margin:40px auto;background: url('/img/icon01.png') no-repeat 253px 0;height: 200px;}
+.timelinecontent dl dt{height: 30px;float: left;width: 300px;text-align: right;padding-right: 80px;}
+.timelinecontent dl dt h2{font-size: 32px;color:#e64f00;font-weight: bold;margin: 0; margin-bottom: 20px;font-family: 'impact'}
+.timelinecontent dl dt p{font-size:14px;color: #717071;height: 26px;line-height: 26px; margin: 0;overflow: hidden;}
+.timelinecontent dl dd{float: right;width: 300px;text-align: left;padding-left: 30px;}
+.timelinecontent dl dd img{border: 3px solid #e64f00;border-radius:10px;width: 210px;height: 113px;}
+.timelinecontent dl dd h3{background: url('/img/timelinetop.jpg') no-repeat;padding-left:15px;display: line-black; height: 15px;font-size: 12px;padding-top: 0;margin-top: 8px;color: #e64f00;text-align: left}
+.timelinecontent .right{background: url('/img/icon02.png') no-repeat 328px 0;}
+.timelinecontent .right dt{float: right;text-align: left;padding-left: 80px;}
+.timelinecontent .right dd{float: left;text-align: right;padding-right: 30px;padding-left: 0;}
+.timelinecontent .right dd h3{margin-left: 60px;}
 .active-porduct{
  background:#efefef;
 }
